# CustomSlicerGenerator

./: CMakeLists.txt  README.md  configlinux.json  configmac.json
CustomSlicerGenerator/: CMakeLists.txt  CustomSlicerGenerator.py  null.config.json  sample.config.json
Customizer/: CMakeLists.txt  Customizer.py
